@@ -1,0 +1,15 @@
+<!--
+  Local test files use in Jena2 development
+
+  Test core hasValue processing - 'only if' direction.
+-->
+<rdf:RDF
+    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+    xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
+    xmlns:owl="http://www.w3.org/2002/07/owl#"
+    xmlns="http://www.w3.org/2002/03owlt/localtests/premisesHv2#"
+    xml:base="http://www.w3.org/2002/03owlt/localtests/premisesHv2" >
+     <owl:Thing rdf:ID="i">
+        <rdf:type rdf:resource="#c" />
+     </owl:Thing>
+</rdf:RDF>
